Add maven and general bug fixes